<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="tk.scoreli.liveticker.MainActivity" >

    <item
        android:id="@+id/action_example"
        android:showAsAction="withText|ifRoom"
        android:title="@string/action_example"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
	<item android:id="@+id/menu_anmelden" android:title="@string/menu_Anmelden"></item>
    <item android:id="@+id/menu_Scoreboard" android:title="@string/menu_Scoreboard"></item>
    <item android:id="@+id/menu_Spiele" android:title="@string/menu_AktuelleVeranstaltung"></item>
    <item android:id="@+id/menu_Registrieren" android:title="@string/menu_Registrieren"></item>
</menu>
